# Piki

./: .SRCINFO  .gitignore  .gitmodules  CMakeLists.txt  PKGBUILD  PKGBUILD.msys2  PKGBUILD_piki  README.md  io.github.micro.piki.desktop  io.github.micro.piki.json  io.github.micro.piki.metainfo.xml  io.github.microgamercz.piki.desktop  io.github.microgamercz.piki.json  io.github.microgamercz.piki.metainfo.xml  pot_gen.sh
.github/workflows/: flatpak.yaml  windows-arm64.yaml
android/: AndroidManifest.xml  build.gradle  version.gradle.in
po/cs/: piki.po
po/nl/: piki.po
src/: CMakeLists.txt  imagedownloader.cpp  imagedownloader.h  loginhandler.cpp  loginhandler.h  loginprocessor.cpp  loginprocessor.h  main.cpp  pikicache.cpp  pikicache.h  pikiconfig.kcfg  pikiconfig.kcfgc  pikihelper.cpp  pikihelper.h  pikitags.h  pixivnamfactory.h
src/contents/controls/: AccountButton.qml  AccountsManager.qml  CommentCard.qml  CommentSection.qml  FlatAction.qml  Header.qml  IllustDetails.qml  IllustToolbar.qml  IllustViewProfileCard.qml  IllustrationButton.qml  PixivImage.qml  PremiumBanner.qml  RequestsCard.qml  SelectionButtons.qml  SeriesButton.qml  SeriesChapterCard.qml  SeriesDetailsCard.qml  Sidebar.qml  SidebarButton.qml  TagChip.qml  WallpaperSelections.qml  WebAction.qml  XWorkAsWallpaperOptions.qml
src/contents/controls/templates/: DoubleAbstractCard.qml  FeedPage.qml
src/contents/migrations/2025-08-28/: down.sql  up.sql
src/contents/migrations/2026-07-17/: down.sql  up.sql
src/contents/ui/: Collection.qml  Following.qml  History.qml  Home.qml  IllustView.qml  Loading.qml  Login.qml  Login_Android.qml  Main.qml  Newest.qml  NovelView.qml  NovelView_Android.qml  Premium.qml  ProfileView.qml  Search.qml  Series.qml  Settings.qml  Watchlist.qml  Welcome.qml
